Sat May  1 12:11:33 PDT 1999 Manish Singh <yosh@gimp.org>

	* acinclude.m4
	* config.guess
	* config.sub
	* ltconfig
	* ltmain.sh: libtool 1.3

Mon Mar 29 21:13:13 PST 1999 Manish Singh <yosh@gimp.org>

	* acinclude.m4
	* config.guess
	* config.sub
	* ltconfig
	* ltmain.sh: libtool 1.2f

Fri Feb 26 20:38:53 1999  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Up version number to 0.5

Thu Feb 11 23:09:55 1999  Owen Taylor  <otaylor@redhat.com>

	* configure.in (cflags_set): Up version number to 0.4.

	* **/Makefile.am: Removed all references to
	 makemakefile.sh

Tue Feb  2 05:16:12 PST 1999 Manish Singh <yosh@gimp.org>

	* acinclude.m4
	* config.guess
	* config.sub
	* ltconfig
	* ltmain.sh: use CVS libtool 1.2e. Tell me what breaks.

	* pixmap/Makefile.am
	* metal/Makefile.am
	* notif/Makefile.am
	* redmond95/Makefile.am: use -module and -avoid-version flags

	* configure.in: minor clean ups

Wed Jan 27 21:14:54 PST 1999 Manish Singh <yosh@gimp.org>

	* acinclude.m4: new file, to go with libtool

	* ltmain.sh
	* ltconfig: better file magic regexp for Linux libs

Mon Jan 18 14:08:14 1999  Owen Taylor  <otaylor@redhat.com>

	* README:  Wrote one
	* AUTHORS: Added Randy Gordon

	* gtk-engines.spec: Up version number

Mon Jan 18 13:46:41 1999  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Up version for an 0.2 release.

Mon Jan 18 11:25:25 1999  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Remove -lgdk, -lgtk, and -lglib from GDK_IMLIB_LIBS.

	* redmond95/Makefile.am notif/Makefile.am metal/Makefile.am
	  pixmap/Makefile.am: Don't link to GTK_LIBS, since we 
	  want to use the main programs copy of GTK+.

	* */*_theme_main.c: Add a gtk_module_check_init() function to
	  check if we are compatible with the version of GTK+ of the
	  main executable. Removed some debugging printf's.
	
Wed Jan 13 16:30:45 PST 1999 Manish Singh <yosh@gimp.org>

	* ltconfig
	* ltmain.sh: House! Techno! Libtool! (do the 1.2d dance baby)
